RESOLVED FIXED168187
[SOUP] Downloads fail when the given destination is not a URI
https://bugs.webkit.org/show_bug.cgi?id=168187
Summary [SOUP] Downloads fail when the given destination is not a URI
Carlos Garcia Campos
Reported 2017-02-12 03:34:48 PST
It always expects a uri, and fails if a local path is given. This is causing several test to fail.
Attachments
Patch (3.25 KB, patch)
2017-02-12 03:39 PST, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2017-02-12 03:39:05 PST
WebKit Commit Bot
Comment 2 2017-02-12 09:07:18 PST
Comment on attachment 301302 [details] Patch Clearing flags on attachment: 301302 Committed r212206: <http://trac.webkit.org/changeset/212206>
WebKit Commit Bot
Comment 3 2017-02-12 09:07:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.